fix merged timeline having wrong color

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ span[title="Status: Closed"] > svg.octicon-issue-closed {
     color: var(--rissue-white) !important;
 }
 
-/* timeline */
+/* issue timeline */
 
 .TimelineItem-badge.color-bg-done-emphasis {
     background-color: var(--rissue-issue-closed) !important;
@@ -31,6 +31,12 @@ span[title="Status: Closed"] > svg.octicon-issue-closed {
 
 .TimelineItem-badge.color-bg-done-emphasis > svg.octicon-issue-closed {
     color: var(--rissue-white) !important;
+}
+
+/* pull timeline */
+
+div.pull-discussion-timeline .TimelineItem-badge.color-bg-done-emphasis {
+    background-color: var(--rissue-pull-merged) !important;
 }
 
 /* projects beta */
